--- a/public/style.css
+++ b/public/style.css
@@ -35,27 +35,6 @@ body {
   padding: 0;
   background-color: #fafafa;
 }
-#sketch-holder {
-  position: relative;
-  margin: 0;
-  top: 0;
-  left: 0;
-  height: 2000px;
-  background-color: #dcdcdc;
-  z-index: 9999;
-  padding: 25px;
-  -webkit-backface-visibility: hidden;
-  /* Prevents flickering */
-
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
-  overflow: hidden;
-  -moz-user-select: -moz-none;
-  -khtml-user-select: none;
-  -webkit-user-select: none;
-}
 #dialog-holder {
   position: relative;
   margin: 0;
@@ -69,10 +48,10 @@ body {
   -webkit-backface-visibility: hidden;
   /* Prevents flickering */
 
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.15s ease-in-out;
+  -moz-transition: all 0.15s ease-in-out;
+  -o-transition: all 0.15s ease-in-out;
+  -ms-transition: all 0.15s ease-in-out;
   overflow: scroll;
   font-size: 100px;
   outline: none;
@@ -87,18 +66,6 @@ body {
   z-index: 9999;
   background: none;
 }
-#sketchcanvas {
-  outline: none;
-  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-  /* mobile webkit */
-
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  top: 30px;
-  right: 15px;
-  background-color: #fafafa;
-}
 #message {
   font-size: 30px;
 }
@@ -108,7 +75,6 @@ body {
   margin-top: 10px;
   width: 40px;
   height: 40px;
-  margin-bottom: 0px;
   text-align: center;
   display: inline;
   opacity: .8;
@@ -116,10 +82,11 @@ body {
   -moz-user-select: -moz-none;
   -khtml-user-select: none;
   -webkit-user-select: none;
+  cursor: pointer;
 }
 .button i {
   color: #3c3c3c;
-  font-size: 100px;
+  font-size: 130px;
 }
 .button:active {
   opacity: 1;
@@ -130,22 +97,18 @@ body {
   -webkit-backface-visibility: hidden;
   /* Prevents flickering */
 
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.15s ease-in-out;
+  -moz-transition: all 0.15s ease-in-out;
+  -o-transition: all 0.15s ease-in-out;
+  -ms-transition: all 0.15s ease-in-out;
   margin: 5px;
   display: inline-block;
   -moz-user-select: -moz-none;
   -khtml-user-select: none;
   -webkit-user-select: none;
+  cursor: pointer;
 }
-#color-holder {
-  width: 45%;
-  height: 600px;
-  overflow: scroll;
-}
-.color_option:active {
+.active {
   -webkit-transform: scale(1.2);
   -moz-transform: scale(1.2);
   -o-transform: scale(1.2);
@@ -173,6 +136,7 @@ a {
   -khtml-user-select: none;
   -webkit-user-select: none;
   border: none;
+  cursor: pointer;
 }
 .helpToggle i {
   font-size: 60px;
@@ -201,10 +165,10 @@ a {
   -webkit-backface-visibility: hidden;
   /* Prevents flickering */
 
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.15s ease-in-out;
+  -moz-transition: all 0.15s ease-in-out;
+  -o-transition: all 0.15s ease-in-out;
+  -ms-transition: all 0.15s ease-in-out;
   -moz-user-select: -moz-none;
   -khtml-user-select: none;
   -webkit-user-select: none;
@@ -212,4 +176,92 @@ a {
 }
 #narrate:hover {
   background: #fafafa;
+}
+#sketch-holder {
+  position: absolute;
+  margin: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #dcdcdc;
+  z-index: 9999;
+  padding: 0px;
+  -webkit-backface-visibility: hidden;
+  /* Prevents flickering */
+
+  -webkit-transition: all 0.15s ease-in-out;
+  -moz-transition: all 0.15s ease-in-out;
+  -o-transition: all 0.15s ease-in-out;
+  -ms-transition: all 0.15s ease-in-out;
+  overflow: hidden;
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+}
+.controls-container {
+  width: 200px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background-color: rgba(240, 240, 240, 0.7);
+  text-align: center;
+}
+.controls {
+  padding-top: 20px;
+  line-height: 100px;
+}
+#color-holder {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 10px;
+  width: 180px;
+  height: 100%;
+  overflow: scroll;
+  background-color: rgba(240, 240, 240, 0.7);
+}
+#sketchcanvas {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -300px;
+  margin-top: -300px;
+  outline: none;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  /* mobile webkit */
+
+  padding: 0px;
+  background-color: #fafafa;
+  cursor: crosshair;
+}
+#range-outer {
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  position: relative;
+  margin-left: 40px;
+  margin-top: 10px;
+  width: 120px;
+  height: 120px;
+  border-radius: 60px;
+  -webkit-border-radius: 60px;
+  -moz-border-radius: 60px;
+  background-color: #c8c8c8;
+  cursor: crosshair;
+}
+#range-inner {
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  position: absolute;
+  left: 45px;
+  top: 45px;
+  width: 30px;
+  height: 30px;
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  background-color: #646464;
 }
