--- a/public/style.less
+++ b/public/style.less
@@ -1,5 +1,6 @@
 @bkg: rgb(250,250,250);
 @terminalbkg: rgb(220,220,220);
+@controlbkg: rgba(240,240,240,.7);
 @terminaltext: rgb(60,60,60);
 @textcol: rgb(60,60,60);
 
@@ -42,7 +43,7 @@
     -ms-transform:rotate(@deg);
 }
 
-.ease (@time: .2s) {
+.ease (@time: .15s) {
     -webkit-backface-visibility: hidden; /* Prevents flickering */
     -webkit-transition: all @time ease-in-out;
     -moz-transition: all @time ease-in-out;
@@ -80,20 +81,6 @@ body{
     
 }
 
-#sketch-holder{
-    position: relative;
-    margin: 0;
-    top:0;
-    left:0;
-    height: 2000px;
-    background-color: @terminalbkg;
-    z-index: 9999;
-    padding: 25px;
-    .ease;
-    overflow: hidden;
-    .noselect;
-}
-
 #dialog-holder{
     position: relative;
     margin: 0;
@@ -121,17 +108,6 @@ body{
     background:none;
 }
 
-#sketchcanvas{
-        outline: none;
-        -webkit-tap-highlight-color: rgba(255, 255, 255, 0); /* mobile webkit */
-        margin:0;
-        padding:0;
-        position:absolute;
-        top:30px;
-        right:15px;
-        background-color: rgb(250,250,250);
-}
-
 #message{
     font-size: 30px;
 }
@@ -142,17 +118,17 @@ body{
     margin-top: 10px;
     width:40px;
     height:40px;
-    margin-bottom: 0px;
     text-align:center;
     display: inline;
     opacity:.8;
     padding: 15px;
     .noselect;
+    cursor: pointer;
 }
 
 .button i{
     color:rgb(60,60,60);
-    font-size: 100px;
+    font-size: 130px;
 }
 
 .button:active{
@@ -160,22 +136,16 @@ body{
 }
 
 .color_option{
-    
     width:50px;
     height:70px;
     .ease;
     margin: 5px;
     display: inline-block;
     .noselect;
+    cursor: pointer;
 }
 
-#color-holder{
-    width: 45%;
-    height:600px;
-    overflow:scroll;
-}
-
-.color_option:active{
+.active{
     .scale(1.2);
 }
 
@@ -201,6 +171,7 @@ a{
     .rounded-corners;
     .noselect;
     border: none;
+    cursor: pointer;
     
     i{
         font-size: 60px;
@@ -234,6 +205,88 @@ a{
 #narrate:hover{
     background: @bkg;
 }
+
+#sketch-holder{
+    position: absolute;
+    margin: 0;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background-color: @terminalbkg;
+    z-index: 9999;
+    padding: 0px;
+    .ease;
+    overflow: hidden;
+    .noselect;
+}
+
+.controls-container{
+    width: 200px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background-color: @controlbkg;
+    text-align: center;
+}
+
+.controls{
+
+    padding-top: 20px;
+    line-height: 100px;
+
+}
+
+#color-holder{
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 10px;
+    width: 180px;
+    height: 100%;
+    overflow:scroll;
+    background-color: @controlbkg;
+}
+
+#sketchcanvas{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -300px;
+    margin-top: -300px;
+    outline: none;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0); /* mobile webkit */
+    padding: 0px;
+    background-color: rgb(250,250,250);
+    cursor: crosshair;
+}
+
+#range-outer{
+    .noselect;
+    position: relative;
+    margin-left: 40px;
+    margin-top: 10px;
+    width: 120px;
+    height: 120px;
+    .rounded-corners(60px);
+    background-color: rgb(200,200,200);
+    cursor: crosshair;
+}
+
+#range-inner{
+    .noselect;
+    position: absolute;
+    left: 45px;
+    top: 45px;
+    width: 30px;
+    height: 30px;
+    .rounded-corners(15px);
+    background-color: rgb(100,100,100);
+}
+
+
+
 
 
 
