--- a/public/style.less
+++ b/public/style.less
@@ -159,14 +159,18 @@ a{
     text-decoration:none;
 }
 
-.helpToggle{
+.menu {
     position: absolute;
     top:0px;
     right: 0;
+}
+
+.menu-button{
     background-color: darken(@bkg, 15%);
     color: rgb(100,100,100);
     padding: 15px;
     margin: 5px;
+    width: 80px;
 
     .rounded-corners;
     .noselect;
@@ -177,9 +181,26 @@ a{
     i{
         font-size: 60px;
     }
+
+    
 }
 
-.helpToggle:active{
+.close-button{
+    border: none;
+    margin-top: -20px;
+    padding: 0;
+    background: transparent;
+    span{
+        margin: 0;
+        padding: 0;
+        color: black;
+        font-size: 80px;
+    }
+    cursor: pointer;
+    opacity: .7;
+}
+
+.menu-button:active, .close-button:active{
     opacity: .9;
 
 }
@@ -212,7 +233,7 @@ a{
     background: @bkg;
 }
 
-#sketch-holder{
+.popup{
     position: absolute;
     margin: 0;
     top:0;
@@ -231,7 +252,7 @@ a{
     width: 200px;
     position: absolute;
     top: 0;
-    left: 0;
+    right: 0;
     height: 100%;
     background-color: @controlbkg;
     text-align: center;
@@ -247,7 +268,7 @@ a{
 #color-holder{
     position: absolute;
     top: 0;
-    right: 0;
+    left: 0;
     padding: 10px;
     width: 180px;
     height: 100%;
@@ -291,9 +312,42 @@ a{
     background-color: rgb(100,100,100);
 }
 
+#videos{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    video{
+        position: absolute;
+        width: 70%;
+        top: 50px;
+        left: 50%;
+        margin-left: -35%;
+        background-color: @controlbkg;
+        padding: 20px;
+        .rounded-corners;
+    }
+}
 
+#button-icons{
+    position: absolute;
+    width: 1000px;
+    bottom: 0;
+    left: 50%;
+    margin-left: -500px;
+    text-align: center;
+    padding: 5px; 
+    background-color: @controlbkg;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
 
-
-
+.button-icon{
+    margin: 15px;
+    width: 100px;
+    height: 100px;
+    .ease;
+}
 
 
