--- a/public/style.css
+++ b/public/style.css
@@ -127,7 +127,7 @@ a {
   right: 0;
 }
 .menu-button {
-  background-color: #d4d4d4;
+  background-color: transparent;
   color: #646464;
   padding: 15px;
   margin: 5px;
@@ -147,7 +147,8 @@ a {
 }
 .close-button {
   border: none;
-  margin-top: -20px;
+  margin-top: -10px;
+  margin-right: 10px;
   padding: 0;
   background: transparent;
   cursor: pointer;
@@ -206,7 +207,7 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #dcdcdc;
+  background-color: #e6e6e6;
   z-index: 9999;
   padding: 0px;
   -webkit-backface-visibility: hidden;
@@ -227,7 +228,7 @@ a {
   top: 0;
   right: 0;
   height: 100%;
-  background-color: rgba(240, 240, 240, 0.7);
+  background-color: rgba(245, 245, 245, 0.7);
   text-align: center;
 }
 .controls {
@@ -242,7 +243,7 @@ a {
   width: 180px;
   height: 100%;
   overflow: scroll;
-  background-color: rgba(240, 240, 240, 0.7);
+  background-color: rgba(245, 245, 245, 0.7);
 }
 #sketchcanvas {
   position: absolute;
@@ -300,7 +301,7 @@ a {
   top: 50px;
   left: 50%;
   margin-left: -35%;
-  background-color: rgba(240, 240, 240, 0.7);
+  background-color: rgba(245, 245, 245, 0.7);
   padding: 20px;
   border-radius: 8px;
   -webkit-border-radius: 8px;
@@ -314,7 +315,7 @@ a {
   margin-left: -500px;
   text-align: center;
   padding: 5px;
-  background-color: rgba(240, 240, 240, 0.7);
+  background-color: rgba(245, 245, 245, 0.7);
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
