--- a/public/style.less
+++ b/public/style.less
@@ -1,6 +1,6 @@
 @bkg: rgb(250,250,250);
-@terminalbkg: rgb(220,220,220);
-@controlbkg: rgba(240,240,240,.7);
+@terminalbkg: rgb(230,230,230);
+@controlbkg: rgba(245,245,245,.7);
 @terminaltext: rgb(60,60,60);
 @textcol: rgb(60,60,60);
 
@@ -166,7 +166,7 @@ a{
 }
 
 .menu-button{
-    background-color: darken(@bkg, 15%);
+    background-color: transparent;
     color: rgb(100,100,100);
     padding: 15px;
     margin: 5px;
@@ -187,7 +187,8 @@ a{
 
 .close-button{
     border: none;
-    margin-top: -20px;
+    margin-top: -10px;
+    margin-right: 10px;
     padding: 0;
     background: transparent;
     span{
