--- a/public/style.less
+++ b/public/style.less
@@ -171,6 +171,7 @@ a{
     padding: 15px;
     margin: 5px;
     width: 80px;
+    outline: none;
 
     .rounded-corners;
     .noselect;
@@ -191,6 +192,7 @@ a{
     margin-right: 10px;
     padding: 0;
     background: transparent;
+    outline: none;
     span{
         margin: 0;
         padding: 0;
