--- a/public/style.less
+++ b/public/style.less
@@ -328,7 +328,7 @@ a{
         left: 50%;
         margin-left: -35%;
         background-color: @controlbkg;
-        padding: 20px;
+        padding: 10px;
         .rounded-corners;
     }
 }
@@ -351,6 +351,7 @@ a{
     width: 100px;
     height: 100px;
     .ease;
+    .noselect;
 }
 
 
